added Translate & complete some function