@@ -20,6 +20,8 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
+import static io.github.skydynamic.quickbakcupmulti.translate.Translate.tr;
+
 public class ListBackupsUtils {
     private static final Logger logger = LoggerFactory.getLogger("Qbm-ListBackupsUtil");
     private static final Path backupPath = BackupManager.getBackupPath();
@@ -49,19 +51,9 @@ public class ListBackupsUtils {
 
     private static MutableComponent getPageNavigationText(String direction, int page, int totalPage, int offset) {
         MutableComponent text = Component.literal(direction);
-        text.withStyle(style ->
-            style.withHoverEvent(
-                new HoverEvent(HoverEvent.Action.SHOW_TEXT, Component.nullToEmpty(direction))
-            )
-        );
+        text.withStyle(style -> style.withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, Component.nullToEmpty(direction))));
         if (page != offset && totalPage > 1) {
-            text.withStyle(style ->
-                style.withClickEvent(
-                    new ClickEvent(
-                        ClickEvent.Action.RUN_COMMAND,
-                        "/qb list " + (page + offset))
-                )
-            ).withStyle(style -> style.withColor(ChatFormatting.AQUA));
+            text.withStyle(style -> style.withClickEvent(new ClickEvent(ClickEvent.Action.RUN_COMMAND, "/qb list " + (page + offset)))).withStyle(style -> style.withColor(ChatFormatting.AQUA));
         } else {
             text.withStyle(style -> style.withColor(ChatFormatting.DARK_GRAY));
         }
@@ -84,88 +76,33 @@ public class ListBackupsUtils {
         MutableComponent resultText = Component.literal("");
         StorageInfo result = entry.getValue();
 
-        backText.withStyle(style ->
-            style.withClickEvent(
-                new ClickEvent(
-                    ClickEvent.Action.SUGGEST_COMMAND,
-                    "/qb restore \"%s\"".formatted(name))
-            )
-        ).withStyle(style ->
-            style.withHoverEvent(
-                new HoverEvent(
-                    HoverEvent.Action.SHOW_TEXT,
-                    Component.nullToEmpty("Back the save to %s".formatted(name)))
-            )
-        );
+        backText.withStyle(style -> style.withClickEvent(new ClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/qb restore \"%s\"".formatted(name)))).withStyle(style -> style.withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, Component.nullToEmpty(tr("quickbackupmulti.list_backup.slot.restore", name)))));
 
-        deleteText.withStyle(style ->
-            style.withClickEvent(
-                new ClickEvent(
-                    ClickEvent.Action.SUGGEST_COMMAND,
-                    "/qb delete %s".formatted(name))
-            )
-        ).withStyle(style ->
-            style.withHoverEvent(
-                new HoverEvent(
-                    HoverEvent.Action.SHOW_TEXT,
-                    Component.nullToEmpty("Click to delete %s forever".formatted(name)))
-            )
-        );
+        deleteText.withStyle(style -> style.withClickEvent(new ClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/qb delete %s".formatted(name)))).withStyle(style -> style.withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, Component.literal(tr("quickbackupmulti.list_backup.slot.delete", name)))));
 
-        nameText.withStyle(style ->
-            style.withClickEvent(
-                new ClickEvent(
-                    ClickEvent.Action.SUGGEST_COMMAND,
-                    "/qb show %s".formatted(name))
-            )
-        ).withStyle(style ->
-            style.withHoverEvent(
-                new HoverEvent(
-                    HoverEvent.Action.SHOW_TEXT,
-                    Component.nullToEmpty("Show the detail of %s".formatted(name)))
-            )
-        );
+        nameText.withStyle(style -> style.withClickEvent(new ClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/qb show %s".formatted(name)))).withStyle(style -> style.withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, Component.nullToEmpty(tr("quickbackupmulti.list_backup.slot.show", name)))));
 
         String desc = result.getDesc();
         if (desc.isEmpty()) desc = "Empty";
         double backupSizeMB = (double) backupSizeB / FileUtils.ONE_MB;
         double backupSizeGB = (double) backupSizeB / FileUtils.ONE_GB;
         String sizeString = (backupSizeMB >= 1000) ? String.format("%.2fGB", backupSizeGB) : String.format("%.2fMB", backupSizeMB);
-        resultText.append("\n" + "[§6#%s§r]".formatted(num + (BACKUPS_PER_PAGE * (page - 1))) + " ")
-            .append(nameText)
-            .append(backText)
-            .append(deleteText)
-            .append("§a" + sizeString)
-            .append(
-                String.format(
-                    " §b%s§7: §r%s",
-                    new SimpleDateFormat("yyyy-MM-dd HH:mm:ss").format(result.getTimestamp()),
-                    truncateString(desc, 10)
-                )
-            );
+        resultText.append("\n" + tr("quickbackupmulti.list_backup.slot.header", num + (5 * (page - 1))) + " ").append(nameText).append(backText).append(deleteText).append("§a" + sizeString).append(String.format(" §b%s§7: §r%s", new SimpleDateFormat("yyyy-MM-dd HH:mm:ss").format(result.getTimestamp()), truncateString(desc, 10)));
         return resultText;
     }
 
     public static MutableComponent list(int page) {
         long totalBackupSizeB = 0;
-        List<Map.Entry<String, StorageInfo>> backupsInfoList = BackupManager.getBackupsList().stream()
-            .map(name -> Map.entry(name, Objects.requireNonNull(QuickbakcupmultiReforged.getDatabase().getStorageInfoWithName(name))))
-            .sorted((c1, c2) -> -Long.compare(c1.getValue().getTimestamp(), c2.getValue().getTimestamp()))
-            .collect(Collectors.toList());
+        List<Map.Entry<String, StorageInfo>> backupsInfoList = BackupManager.getBackupsList().stream().map(name -> Map.entry(name, Objects.requireNonNull(QuickbakcupmultiReforged.getDatabase().getStorageInfoWithName(name)))).sorted((c1, c2) -> -Long.compare(c1.getValue().getTimestamp(), c2.getValue().getTimestamp())).collect(Collectors.toList());
         if (backupsInfoList.isEmpty() || getPageCount(backupsInfoList, page) == 0) {
-            return Component.literal("Do not has any backup now");
+            return Component.literal(tr("quickbackupmulti.list_empty"));
         }
         int totalPage = getTotalPage(backupsInfoList);
 
-        MutableComponent resultText = Component.literal("§d[Page §b%s§d Slot Information]§r".formatted(page));
+        MutableComponent resultText = Component.literal(tr("quickbackupmulti.list_backup.title", page));
         MutableComponent backPageText = getBackPageText(page, totalPage);
         MutableComponent nextPageText = getNextPageText(page, totalPage);
-        resultText.append("\n")
-            .append(backPageText)
-            .append("  ")
-            .append("[§b%s§r / §b%s§r]".formatted(page, totalPage))
-            .append("  ")
-            .append(nextPageText);
+        resultText.append("\n").append(backPageText).append("  ").append(tr("quickbackupmulti.list_backup.page_msg", page, totalPage)).append("  ").append(nextPageText);
         for (int j = 1; j <= getPageCount(backupsInfoList, page); j++) {
             try {
                 Map.Entry<String, StorageInfo> entry = backupsInfoList.get(((j - 1) + BACKUPS_PER_PAGE * (page - 1)));
@@ -180,16 +117,13 @@ public class ListBackupsUtils {
         }
         double totalBackupSizeMB = (double) totalBackupSizeB / FileUtils.ONE_MB;
         double totalBackupSizeGB = (double) totalBackupSizeB / FileUtils.ONE_GB;
-        String sizeString =
-            (totalBackupSizeMB >= 1000)
-                ? String.format("%.2fGB", totalBackupSizeGB)
-                : String.format("%.2fMB", totalBackupSizeMB);
-        resultText.append("\n" + "These backups total space consumed: §a%s§r".formatted(sizeString));
+        String sizeString = (totalBackupSizeMB >= 1000) ? String.format("%.2fGB", totalBackupSizeGB) : String.format("%.2fMB", totalBackupSizeMB);
+        resultText.append("\n" + tr("quickbackupmulti.list_backup.slot.total_space", sizeString));
         return resultText;
     }
 
     public static MutableComponent search(List<String> searchResultList) {
-        MutableComponent resultText = Component.literal("Search Success");
+        MutableComponent resultText = Component.literal(tr("quickbackupmulti.search.success"));
         for (int i = 1; i <= searchResultList.size(); i++) {
             try {
                 String name = searchResultList.get(i - 1);
@@ -208,49 +142,19 @@ public class ListBackupsUtils {
         MutableComponent resultText;
         if (QuickbakcupmultiReforged.getStorager().storageExists(name)) {
             StorageInfo backupInfo = QuickbakcupmultiReforged.getDatabase().getStorageInfoWithName(name);
-            resultText = Component.literal("§d[Slot Information]§r");
+            resultText = Component.literal(tr("quickbackupmulti.show.header"));
             String desc = backupInfo.getDesc();
-            if (desc.isEmpty()) desc = "§7Empty§r";
+            if (desc.isEmpty()) desc = tr("quickbackupmulti.empty_comment");
 
-            MutableComponent backText = Component.literal("§2[Click to back]");
-            MutableComponent deleteText = Component.literal("§2[Click to delete]");
-            backText.withStyle(style ->
-                style.withClickEvent(
-                    new ClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/qb restore \"%s\"".formatted(name))
-                )
-            ).withStyle(style ->
-                style.withHoverEvent(
-                    new HoverEvent(
-                        HoverEvent.Action.SHOW_TEXT,
-                        Component.nullToEmpty("Click to restore to slot §6%s§r".formatted(name)))
-                )
-            );
-            deleteText.withStyle(style ->
-                style.withClickEvent(
-                    new ClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/qb delete \"%s\"".formatted(name)))
-            ).withStyle(style ->
-                style.withHoverEvent(
-                    new HoverEvent(
-                        HoverEvent.Action.SHOW_TEXT,
-                        Component.nullToEmpty("Click to delete slot §6%s§r".formatted(name)))
-                )
-            );
+            MutableComponent backText = Component.literal(tr("quickbackupmulti.show.back_button"));
+            MutableComponent deleteText = Component.literal(tr("quickbackupmulti.show.delete_button"));
+            backText.withStyle(style -> style.withClickEvent(new ClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/qb restore \"%s\"".formatted(name)))).withStyle(style -> style.withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, Component.nullToEmpty(tr("quickbackupmulti.list_backup.slot.restore", name)))));
+            deleteText.withStyle(style -> style.withClickEvent(new ClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/qb delete \"%s\"".formatted(name)))).withStyle(style -> style.withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, Component.nullToEmpty(tr("quickbackupmulti.list_backup.slot.delete", name)))));
 
-            resultText.append("\n")
-                .append("§bName" + ": §r" + backupInfo.getName() + "\n")
-                .append("§bBackup Desc" + ": §r" + desc + "\n")
-                .append(
-                    "§bBackup Time"
-                        + ": §r"
-                        + new SimpleDateFormat("yyyy-MM-dd HH:mm:ss").format(backupInfo.getTimestamp())
-                )
-                .append("\n")
-                .append(backText)
-                .append(" ")
-                .append(deleteText);
+            resultText.append("\n").append(tr("quickbackupmulti.show.name") + ": §r" + backupInfo.getName() + "\n").append(tr("quickbackupmulti.show.desc") + ": §r" + desc + "\n").append(tr("quickbackupmulti.show.time") + ": §r" + new SimpleDateFormat("yyyy-MM-dd HH:mm:ss").format(backupInfo.getTimestamp())).append("\n").append(backText).append(" ").append(deleteText);
 
         } else {
-            resultText = Component.literal("Backup Not Found");
+            resultText = Component.literal(tr("quickbackupmulti.show.fail"));
             resultText.withStyle(style -> style.withColor(ChatFormatting.RED));
         }
         return resultText;
